# gRPC-streaming

./: .gitignore  README.md  docker-compose.yml
api-gateway/: .dockerignore  docker-compose.yml  pyproject.toml  requirements.txt
api-gateway/protos/: chat_pb2.py  chat_pb2_grpc.py  message_pb2.py  message_pb2_grpc.py  presence_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
api-gateway/src/: dependencies.py  main.py
api-gateway/src/api/: __init__.py  auth.py  chat.py  messages.py  user.py  websocket.py
api-gateway/src/core/: config.py  kafka.py  redis.py
api-gateway/src/decorators/: grpc.py
api-gateway/src/enums/: status_code.py
api-gateway/src/features/auth/: service.py
api-gateway/src/features/message/: service.py
api-gateway/src/handlers/grpc/: __init__.py  chat.py  message.py  presence.py  user.py
api-gateway/src/handlers/kafka/: __init__.py  message.py  presence.py
api-gateway/src/infrastructure/grpc_clients/: __init__.py  chat.py  message.py  presence.py  user.py
api-gateway/src/infrastructure/kafka_consumers/: message.py  presence.py
api-gateway/src/infrastructure/redis_publishers/: notifier.py
api-gateway/src/infrastructure/websocket/: handler.py  manager.py
api-gateway/src/routers/: __init__.py  auth.py  chat.py  messages.py  user.py
api-gateway/src/rpc/: __init__.py
api-gateway/src/schemas/: chat.py  message.py  presence.py  user.py  websocket.py
api-gateway/src/schemas/api/: auth.py  chat.py  message.py
api-gateway/src/schemas/events/: message.py  presence.py
api-gateway/src/schemas/websocket/: websocket.py
api-gateway/src/services/: __init__.py  auth.py  chat.py  connection.py  message.py  user.py  websocket.py
api-gateway/src/services/grpc/: chat.py  message.py
api-gateway/src/services/kafka/: __init__.py  message.py
api-gateway/src/utils/: utils.py
api-gateway/src/utils/decorators/: grpc.py
api-gateway/src/utils/enums/: grpc_enums.py  status_code.py
api-gateway/src/utils/exceptions/: __init__.py
message-service/: Dockerfile  combine_code.sh  docker-compose.yml  pyproject.toml  requirements.txt
message-service/protos/: message_pb2.py  message_pb2_grpc.py
message-service/src/: main.py
message-service/src/core/: config.py  deps.py
message-service/src/decorators/: __init__.py
message-service/src/dto/: __init__.py
message-service/src/enums/: grpc_enums.py
message-service/src/exceptions/: __init__.py  chat.py  message.py  user.py
message-service/src/formatters/: text_formatter.py
message-service/src/mappers/: grpc_mapper.py
message-service/src/models/: __init__.py  replications.py
message-service/src/repositories/: __init__.py  chat.py  message.py  read_progress.py  user.py
message-service/src/routers/: grpc.py  kafka.py
message-service/src/routers/kafka/: __init__.py  producer.py  subscriber.py
message-service/src/schemas/: chat.py  message.py  user.py
message-service/src/services/: __init__.py  chat.py  message.py  policy.py  user.py
presence-service/: .dockerignore  .env.example  combine_code.ps1  docker-compose.yml  pyproject.toml  requirements.txt
presence-service/protos/: presence_pb2.py  presence_pb2_grpc.py
presence-service/src/: main.py
presence-service/src/alembic/: env.py
presence-service/src/alembic/versions/: c34a5cdf3d68_add_chatmemberreplica.py
presence-service/src/core/: config.py
presence-service/src/db/: redis.py
presence-service/src/decorators/: __init__.py
presence-service/src/models/: __init__.py
presence-service/src/repositories/: chat.py
presence-service/src/routers/: grpc.py  kafka.py
presence-service/src/schemas/: chat.py  presence.py  user.py
presence-service/src/services/: chat.py  presence.py  ttl_listener.py
user-service/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
user-service/protos/: user_pb2.py  user_pb2_grpc.py
user-service/src/: main.py
user-service/src/alembic/: env.py
user-service/src/alembic/versions/: 2025_09_19_1925-0a8a15372924_add_user_model.py  2025_09_20_1832-00686fe9586e_delete_password_col.py  2025_10_07_1813-e238d3751a62_add_password_col.py  2025_10_09_1808-105f6809dd26_add_is_active_col.py  2025_10_09_1815-0fb12e31d583_edit_col.py  2025_12_02_1716-94841ea43464_add_user_avatar.py  (+1 more)
user-service/src/core/: config.py  db.py  deps.py
user-service/src/dto/: user.py
user-service/src/exceptions/: user.py
user-service/src/kafka/: __init__.py
user-service/src/models/: __init__.py
user-service/src/repositories/: __init__.py
user-service/src/routers/: __init__.py  grpc.py
user-service/src/schemas/: user.py
user-service/src/services/: __init__.py
(+58 files in other folders)
