[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka==0.12.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "async-timeout==5.0.1",
    "bcrypt==5.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "fast-depends==3.0.1",
    "fastapi==0.116.2",
    "faststream[cli]==0.6.0",
    "grpcio==1.75.0",
    "grpcio-tools==1.75.0",
    "h11==0.16.0",
    "idna==3.10",
    "loguru==0.7.3",
    "packaging==25.0",
    "protobuf==6.32.1",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "redis>=7.3.0",
    "setuptools==82.0.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
]
