[project]
name = "message-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.21.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiokafka==0.12.0",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "apscheduler==3.6.3",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "beanie>=2.0.1",
    "cachetools==4.2.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "fast-depends==2.4.12",
    "faststream==0.5.48",
    "frozenlist==1.7.0",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "greenlet==3.2.4",
    "grpcio-tools>=1.78.0",
    "gspread==6.2.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "loguru>=0.7.3",
    "magic-filter==1.0.12",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "motor>=3.7.1",
    "multidict==6.6.3",
    "nest-asyncio==1.5.8",
    "numpy>=1.24.0",
    "oauth2client==4.1.3",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.1",
    "python-telegram-bot==13.7",
    "pytz==2025.2",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "tornado==6.5.1",
    "typer==0.16.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "yarl==1.20.1",
]
