[project]
name = "presence-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka==0.12.0",
    "aioredis==2.0.1",
    "alembic>=1.18.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "async-timeout==5.0.1",
    "asyncpg>=0.31.0",
    "fast-depends==3.0.3",
    "faststream[cli]==0.6.2",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "idna==3.11",
    "loguru>=0.7.3",
    "packaging==25.0",
    "protobuf==6.33.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.1.1",
    "redis>=7.2.1",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.48",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]
