[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka==0.12.0",
    "alembic==1.18.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "async-timeout==5.0.1",
    "asyncpg==0.31.0",
    "fast-depends==3.0.5",
    "faststream[cli]==0.6.4",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "idna==3.11",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "protobuf==6.33.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.45",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]
